# sml-aws-lambda-processing

./: README.md  cdk.json  package-lock.json  package.json  pyproject.toml  requirements.txt
image/: Dockerfile  requirements.txt
image/src/: main.py
lib/: aws_lambda_processing-stack.ts
test/: aws_lambda_processing.test.ts
