[project]
name = "aws-lambda-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "yael-holosis",email = "yalon@holosishealth.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.39.11,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "mne (>=1.10.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
